[gd_scene load_steps=8 format=3 uid="uid://cwenpplks1lou"]

[ext_resource type="Script" path="res://scripts/world.gd" id="1_uex6n"]
[ext_resource type="Script" path="res://ui/旧debug_panel.gd" id="2_jd2ua"]
[ext_resource type="Script" path="res://scripts/map_layer.gd" id="2_qnea5"]
[ext_resource type="Script" path="res://ui/game_hud.gd" id="4_ns1fl"]
[ext_resource type="Script" path="res://ui/Dialog.gd" id="5_jhc3h"]
[ext_resource type="Script" path="res://ui/dialog_player.gd" id="6_5ks2w"]
[ext_resource type="Script" path="res://scripts/story.gd" id="7_vecgq"]

[node name="World" type="Node2D"]
script = ExtResource("1_uex6n")
weekly_report_delayed_mode = false
weekly_report_delayed_include_live = false

[node name="MapLayer" type="Node2D" parent="."]
visible = false
script = ExtResource("2_qnea5")

[node name="旧DebugPanel" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_jd2ua")
world_path = null

[node name="MarginContainer" type="MarginContainer" parent="旧DebugPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="旧DebugPanel/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="旧DebugPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DayLabel" type="Label" parent="旧DebugPanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Day 0"

[node name="PlayPauseBtn" type="Button" parent="旧DebugPanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Pause"

[node name="StepBtn" type="Button" parent="旧DebugPanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "+1 Day"

[node name="CitySelect" type="OptionButton" parent="旧DebugPanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="InfoText" type="RichTextLabel" parent="旧DebugPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "InfoText"
fit_content = true

[node name="GameHUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_ns1fl")
show_decay_dialog = false
world_path = NodePath("..")
dialog_player_path = NodePath("../DialogPlayer")
show_supply_dialog = false

[node name="Margin" type="MarginContainer" parent="GameHUD"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBox" type="VBoxContainer" parent="GameHUD/Margin"]
layout_mode = 2

[node name="TopBar" type="HBoxContainer" parent="GameHUD/Margin/VBox"]
layout_mode = 2

[node name="DayLabel" type="Label" parent="GameHUD/Margin/VBox/TopBar"]
layout_mode = 2

[node name="CityLabel" type="Label" parent="GameHUD/Margin/VBox/TopBar"]
layout_mode = 2

[node name="CashLabel" type="Label" parent="GameHUD/Margin/VBox/TopBar"]
layout_mode = 2

[node name="MenuBtn" type="Button" parent="GameHUD/Margin/VBox/TopBar"]
layout_mode = 2
text = "Menu"

[node name="MapBtn" type="Button" parent="GameHUD/Margin/VBox/TopBar"]
layout_mode = 2
text = "Map"

[node name="TradeBtn" type="Button" parent="GameHUD/Margin/VBox/TopBar"]
layout_mode = 2
text = "Trade"

[node name="Dialog" type="Panel" parent="."]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_jhc3h")

[node name="Portrait" type="TextureRect" parent="Dialog"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 120.0
offset_bottom = 143.0

[node name="VBoxContainer" type="VBoxContainer" parent="Dialog"]
layout_mode = 0
offset_left = 133.0
offset_right = 840.0
offset_bottom = 157.0

[node name="Name" type="Label" parent="Dialog/VBoxContainer"]
layout_mode = 2

[node name="Content" type="RichTextLabel" parent="Dialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextDelay" type="Timer" parent="Dialog"]

[node name="Next" type="TextureRect" parent="Dialog"]
visible = false
layout_mode = 0

[node name="DialogPlayer" type="Node" parent="."]
script = ExtResource("6_5ks2w")
dialog_ui_path = NodePath("../Dialog")

[node name="Story" type="Node" parent="."]
script = ExtResource("7_vecgq")
